# rabin-cpp

./: .travis.yml  CMakeLists.txt  LICENSE  Rabin.cpp  Rabin.h  appveyor.yml  build.py  conanfile.py  techstack.md  techstack.yml
test_package/: CMakeLists.txt  conanfile.py  example.cpp
